@@ -127,7 +127,7 @@ CONFIG_SITE_NAME_DESC=Site Name Desc
 CONFIG_SITE_NAME_LABEL=Site Name
 
 CONFIG_SITENAME_PAGETITLES_DESC=Append the site name to all page titles.
-CONFIG_SITENAME_PAGETITLES_LABEL=Show site name in titles?
+CONFIG_SITENAME_PAGETITLES_LABEL=Site name in titles?
 
 CONFIG_SITE_OFFLINE_DESC=Site Offline Desc
 CONFIG_SITE_OFFLINE_LABEL=Site Offline
